// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentEditor component renders default variant 1`] = `
<div class="sg-content-editor editor-content"><a href="https://github.immediate.co.uk/WCP/patchwork/new/develop/README.md" target="_blank" class="sg-content-editor__link">
    Edit on GitHub
  </a>
  <p>

  </p>
</div>
`;

exports[`ContentEditor component renders with content 1`] = `
<div class="sg-content-editor editor-content"><a href="https://github.immediate.co.uk/WCP/patchwork/edit/develop/README.md" target="_blank" class="sg-content-editor__link">
    Edit on GitHub
  </a>
  <div class="mt-md">Foo</div>
</div>
`;
